// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inlineTemplateTransformer should apply transformation to inline template 1`] = `
"import { Component } from '@angular/core';
@Component({
    selector: 'test',
    template: \`<button (click)=\\"__click$.next('the payload')\\">Click Me</button>\`,
    styleUrls: ['./app.component.css']
})
export class TestComponent {
}
"
`;

exports[`inlineTemplateTransformer should not apply transformation if component has an external template 1`] = `
"import { Component } from '@angular/core';
@Component({
    selector: 'test',
    templateUrl: './some/path',
    styleUrls: ['./app.component.css']
})
export class TestComponent {
}
"
`;

exports[`inlineTemplateTransformer should not apply transformation to empty file 1`] = `""`;

exports[`inlineTemplateTransformer should transform inline template of multiple classes in a single file 1`] = `
"import { Component } from '@angular/core';
import { ObservableEvent } from 'ngx-template-streams';
import { Observable } from 'rxjs';
@Component({
    selector: 'a',
    template: \`<button (click)=\\"__a$.next($event)\\">Test<button>\`
})
export class ClassA {
    @ObservableEvent()
    a$: Observable<any>;
}
@Component({
    selector: 'b',
    template: \`<button (click)=\\"__b$.next($event)\\">Test<button>\`
})
export class ClassB {
    @ObservableEvent()
    b$: Observable<any>;
}
"
`;
